# AirLabs-To-S3

./: .gitignore  .pylintrc  Airlabs_api.py  Dockerfile  Makefile  README.md  airlabs_api.py  clean_data.py  fetch_data.py  file_conversion.py  main.py  mypy.ini  pyproject.toml  s3.py  structures.py
airlabs/: pyvenv.cfg
instance/: flight_data.csv  flight_data.json
structures/: data_classes.py
