[tool.poetry]
name = "flight-data"
version = "0.1.0"
description = ""
authors = ["Joan Chen <joanchenuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.14.5"
mypy = "^0.971"
black = "^22.6.0"
pytest = "^7.1.2"
requests = "^2.28.1"
types-requests = "^2.28.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
