[tool.poetry]
name = "flight-data"
version = "0.1.0"
description = ""
authors = ["Joan Chen <joanchenuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
black = "^22.6.0"
types-requests = "^2.28.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
